# ai-projects

mcp/project-template/: README.md  examples.md  host.py  pyproject.toml  weather_Israel.py  weather_USA.py
promptProject/: commandPrompt.md  main.py  pyproject.toml
promptProject/versions/: commandPrompt2.md
rag/rag-llamaindex/: README.md  agent.py  file_storage.py  objects.py  prepare.py  pyproject.toml  rag_workflow.py  workflow-diagram.html  workflow.py
rag/rag-llamaindex/claude/: CLAUDE.md
rag/rag-llamaindex/example of use/: chat.txt
skills/files-browser-agent/: .gitignore  README.md  SPEC.md  debts.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
skills/files-browser-agent/scripts/: run-evite.mjs
skills/files-browser-agent/src/main/: index.ts  secrets.ts
skills/files-browser-agent/src/main/ipc/: chat-handlers.ts  fs-handlers.ts  selection-handlers.ts  skill-handlers.ts
skills/files-browser-agent/src/main/services/: agent-tools.ts  anthropic-chat.ts  chat-logger.ts  command-approvals.ts  drives.ts  file-attachments.ts  fs-service.ts  selection-context.ts  selection-state.ts  skills.ts
skills/files-browser-agent/src/preload/: index.ts
skills/files-browser-agent/src/renderer/: index.html
skills/files-browser-agent/src/renderer/src/: App.tsx
skills/files-browser-agent/src/renderer/src/assets/: index.css
skills/files-browser-agent/src/renderer/src/lib/: format.ts
skills/files-browser-agent/src/renderer/src/store/: chatStore.ts  navStore.ts  (+2 more)
skills/files-browser-agent/src/shared/: types.ts
(+13 files in other folders)
